name:                circle
version:             0.1.0.0
description:         Experimental CircleCI client.
license:             MIT
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable circle
  hs-source-dirs: src
  main-is:        Main.hs
  ghc-options:    -static -Wall
  buildable: True
  build-depends:
      base >= 4 && < 5
    , text
    , attoparsec
    , mtl
    , stm
    , transformers
    , lens
    , aeson
    , lens-aeson
    , network
    , bytestring
    , split
    , wreq
    , containers
    , vector
    , process
    , hdaemonize
    , directory
    , http-conduit
